更改文件架构

--- a/LSTM.tex
+++ b/LSTM.tex
@@ -3,7 +3,7 @@
 \usepackage{graphicx}
 \usepackage{minted}
 \usepackage{float}
-\graphicspath{{pic/}}
+\graphicspath{{pic/LSTM/}}
 \usepackage[colorlinks=true,allcolors=blue]{hyperref}
 \title{LSTM预测语句序列}
 \begin{document}
