--- a/start.tex
+++ b/start.tex
@@ -5,6 +5,8 @@
 \usepackage{hyperref}
 \definecolor{bg}{rgb}{0.95,0.95,0.95}
 \newminted{python}{autogobble,linenos,breaklines,python3,bgcolor=bg,breakanywhere}
+\newmintinline{python}{autogobble,linenos,breaklines,python3,bgcolor=bg,breakanywhere}
+\newmintinline{bash}{autogobble,linenos,breaklines,bgcolor=bg,breakanywhere}
 \newminted{ipython}{autogobble,linenos,breaklines,python3,bgcolor=bg,breakanywhere}
 \graphicspath{{pic/}}
 \usepackage{float}
