--- a/book.tex
+++ b/book.tex
@@ -7,7 +7,13 @@
 \usepackage{amssymb}
 \usepackage{times}
 \usepackage{titlesec}
-\usepackage[table]{xcolor}
+% 代码高亮风格
+\usepackage{xcolor}
+\definecolor{bg}{rgb}{0.9,0.9,0.9}
+\usepackage{minted}
+\newmintinline{bash}{autogobble,linenos,breaklines,breakanywhere,showspaces,frame=topline,bgcolor=bg}
+%\newminted{python}{autogobble,linenos,breaklines,breakanywhere,showspaces,python3,frame=topline,bgcolor=bg}
+%\newmintedfile{python}{autogobble,linenos,breaklines,breakanywhere,showspaces,python3,frame=topline,bgcolor=bg}
 %结构化
 \graphicspath{{./pic/chapter1/}{./pic/chapter2/}{./pic/chapter3/}{./pic/example/}}
 \usepackage{subfiles}
@@ -21,7 +27,8 @@
 \usepackage{subfigure}
 \usepackage{longtable}
 \setlength{\arrayrulewidth}{0.5mm}
-\usepackage{hyperref}
+\usepackage[breaklinks]{hyperref}
+%\usepackage{breakurl}
 \usepackage{fancyhdr}
 \pagestyle{fancy}
 \fancyhf{}
