--- a/book.tex
+++ b/book.tex
@@ -12,7 +12,7 @@
 \definecolor{bg}{rgb}{0.9,0.9,0.9}
 \usepackage{minted}
 \newmintinline{bash}{autogobble,linenos,breaklines,breakanywhere,showspaces,frame=topline,bgcolor=bg}
-%\newminted{python}{autogobble,linenos,breaklines,breakanywhere,showspaces,python3,frame=topline,bgcolor=bg}
+\newminted{python}{autogobble,linenos,breaklines,breakanywhere,showspaces,python3,frame=topline,bgcolor=bg}
 %\newmintedfile{python}{autogobble,linenos,breaklines,breakanywhere,showspaces,python3,frame=topline,bgcolor=bg}
 %结构化
 \graphicspath{{./pic/chapter1/}{./pic/chapter2/}{./pic/chapter3/}{./pic/example/}}
